fixed the div alignment made the third portion of the page

--- a/style.css
+++ b/style.css
@@ -115,18 +115,27 @@ font-weight: 600;
 .container{
     display:flex;
     border: 2px solid yellowgreen;
-    height: 200px;
+    
 }
 .square-con{
-    height: 200px;
+    
     font-family: 'Courier New', Courier, monospace;
     font-weight: 100;
     font-size: 17px;
 }
 
 /*THIRD PORTION STARTS HERE*/
-.quotes{
+.qoutes-con{
+    border: 2px solid turquoise;
     display: flex;
-    
+    justify-content: center;
+    min-height: 400px;
 
+}
+.quotes{
+    min-width:400px;
+    border: 2px solid gold;
+}
+.q-sub{
+   text-align: right;
 }
